--- a/style.css
+++ b/style.css
@@ -102,7 +102,10 @@ h1 {
     border: 6px double #2e231d;
     background: #f5f4f4;
     width: 200px;
-    transition-duration: .3s;
+    animation-name: inicio;
+    animation-duration: 2.2s;
+    animation-timing-function: ease-in;
+    animation-fill-mode: forwards;
     margin-bottom: 45px;
 
 }
@@ -113,20 +116,17 @@ h1 {
 
 }
 
-.hero-imagen-desarrollador:hover {
-    width: 230px;
-    box-shadow: 3px 22px 17px rgba(169, 216, 248, 0.94);
 
-}
 
 .hero-inferior {
     background: #040404;
 }
 
-.madera{
-   fill: #0e67af; 
+.madera {
+    fill: #0e67af;
 }
-.escritorio{
+
+.escritorio {
     stroke: #f5f4f4;
     stroke-width: 0.7px;
 }
@@ -166,7 +166,7 @@ h1 {
 
 .experiencia i {
     font-size: 2.5rem;
-    color: #0e67af; 
+    color: #0e67af;
     background-color: #111010;
     padding: 4px 15px;
     border-radius: 50%;
@@ -398,7 +398,7 @@ footer {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif, 'Times New Roman', Times, serif;
 }
 
-.iconos-redes-sociales a{
+.iconos-redes-sociales a {
     width: 50px;
     height: 50px;
     display: flex;
@@ -411,13 +411,13 @@ footer {
     transition: all .2s ease-in;
 }
 
-.iconos-redes-sociales i{
+.iconos-redes-sociales i {
     color: white;
     font-size: 1.5rem;
     transition: all 0.2s ease-in;
 }
 
-.derechos-de-autor{
+.derechos-de-autor {
     font-size: 15px;
     color: #aeaeae;
     padding: 20px;
@@ -474,6 +474,12 @@ footer {
 
 /*Animaciones hover*/
 
+.hero-imagen-desarrollador:blank {
+    width: 230px;
+    box-shadow: 3px 22px 17px rgba(169, 216, 248, 0.94);
+
+}
+
 .experiencia .columna:hover {
     color: #f5f4f4;
     background-color: #111010;
@@ -497,11 +503,36 @@ footer {
     color: #000000;
 }
 
-.iconos-redes-sociales a:hover{
+.iconos-redes-sociales a:hover {
     background-color: white;
     border: 2px solid rgb(15, 147, 199);
 }
 
-.iconos-redes-sociales a:hover i{
+.iconos-redes-sociales a:hover i {
     color: black;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+@keyframes inicio {
+
+    0% {
+        width: 200px;
+    }
+
+    25% {
+        width: 230px;
+    }
+
+    50% {
+        box-shadow: 3px 22px 17px rgba(169, 216, 248, 0);
+        width: 230px;
+    }
+
+    100% {
+        width: 230px;
+        box-shadow: 3px 22px 17px rgba(169, 216, 248, 0.94);
+    }
 }
