--- a/style.css
+++ b/style.css
@@ -21,6 +21,19 @@
     justify-content: end;
 }
 
+/*Boton arriba*/
+.arriba {
+    display: none;
+    padding: 20px;
+    background: #024959;
+    font-size: 20px;
+    color: #fff;
+    cursor: pointer;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+}
+
 /*Estilos generales*/
 
 section {
