--- a/style.css
+++ b/style.css
@@ -25,13 +25,14 @@
 .ir-arriba {
     display: none;
     padding: 20px;
-    background: #024959;
+    background: #101010;
     font-size: 20px;
     color: #fff;
     cursor: pointer;
     position: fixed;
     bottom: 20px;
     right: 20px;
+    border-radius: 50%;
 }
 
 /*Estilos generales*/
