--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@
 /*Boton arriba*/
 .ir-arriba {
     display: none;
+    height: 30px;
+    width: 30px;
     padding: 20px;
     background: #101010;
     font-size: 20px;
