--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@
     right: 20px;
     border-radius: 50%;
 }
+.bi-arrow-up-circle-fill{
+    height: 100%;
+    width: 100%;
+}
 
 /*Estilos generales*/
 
