--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
     padding: 20px;
     background: transparent;
     font-size: 20px;
-    color: #fff;
+    color: #111010;
     cursor: pointer;
     position: fixed;
     bottom: 20px;
@@ -35,8 +35,8 @@
     border-radius: 50%;
 }
 .bi-arrow-up-circle-fill{
-    height: 100%;
-    width: 100%;
+    height: 50px;
+    width: 50px;
 }
 
 /*Estilos generales*/
