--- a/style.css
+++ b/style.css
@@ -540,6 +540,15 @@ footer {
     0% {
         width: 200px;
     }
+    10% {
+        width: 205px;
+    }
+    15% {
+        width: 215px;
+    }
+    20% {
+        width: 225px;
+    }
 
     25% {
         width: 230px;
@@ -549,7 +558,10 @@ footer {
         box-shadow: 3px 22px 17px rgba(169, 216, 248, 0);
         width: 230px;
     }
-
+    75% {
+        box-shadow: 3px 22px 17px rgb(0, 153, 255);
+        width: 230px;
+    }
     100% {
         width: 230px;
         box-shadow: 3px 22px 17px rgba(169, 216, 248, 0.94);
