--- a/style.css
+++ b/style.css
@@ -559,7 +559,7 @@ footer {
         width: 230px;
     }
     75% {
-        box-shadow: 3px 22px 17px rgb(0, 153, 255);
+        box-shadow: 3px 22px 17px rgba(66, 214, 251, 0.94);
         width: 230px;
     }
     100% {
