--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@
     right: 20px;
     border-radius: 50%;
     border: 1px solid #fff;
+    z-index: 1;
 }
 
 /*Estilos generales*/
@@ -523,7 +524,7 @@ footer {
     border: 2px solid rgb(15, 147, 199);
 }
 
-.ir-arriba:hover{
+.ir-arriba:hover {
     border: 1px dashed #00fff8;
 }
 
@@ -540,12 +541,15 @@ footer {
     0% {
         width: 200px;
     }
+
     10% {
         width: 205px;
     }
+
     15% {
         width: 215px;
     }
+
     20% {
         width: 225px;
     }
@@ -558,10 +562,12 @@ footer {
         box-shadow: 3px 22px 17px rgba(169, 216, 248, 0);
         width: 230px;
     }
+
     75% {
         box-shadow: 3px 22px 17px rgba(66, 214, 251, 0.564);
         width: 230px;
     }
+
     100% {
         width: 230px;
         box-shadow: 3px 22px 17px rgba(169, 216, 248, 0.94);
