--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ h1 {
     background: #f5f4f4;
     width: 200px;
     animation-name: inicio;
-    animation-duration: 1.2s;
+    animation-duration: 2s;
     animation-timing-function: ease-in;
     animation-fill-mode: forwards;
     margin-bottom: 45px;
@@ -536,10 +536,15 @@ footer {
     display: none;
 }
 
+
 @keyframes inicio {
 
     0% {
-        width: 0px;
+        width: 100px;
+    }
+
+    5% {
+        width: 150px;
     }
 
     10% {
@@ -565,6 +570,11 @@ footer {
 
     75% {
         box-shadow: 3px 22px 17px rgba(66, 214, 251, 0.564);
+        width: 230px;
+    }
+
+    90% {
+        box-shadow: 3px 22px 17px rgba(117, 222, 249, 0.564);
         width: 230px;
     }
 
